# ledgerline

./: .critical-files.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_registry.py
backend/alembic_company/: env.py
backend/alembic_company/versions/: 0001_initial_company.py  0002_contacts_and_tax_codes.py  0003_invoices_and_payments.py  0004_bills_and_bill_payments.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  accounts.py  bill_payments.py  bills.py  companies.py  customers.py  export.py  import_api.py  invoices.py  journal.py  payments.py  register.py  reports.py  vendors.py
backend/app/db/: __init__.py  base.py  engines.py  schema.py  session.py  triggers.sql
backend/app/export/: __init__.py  csv.py  json_dump.py
backend/app/models/: __init__.py  account.py  audit.py  bill.py  bill_payment.py  contact.py  invoice.py  item.py  journal.py  payment.py  registry.py  tax_code.py
backend/app/reports/: __init__.py  ap_aging.py  ar_aging.py  balance_sheet.py  basis.py  profit_loss.py  reconciliation.py  trial_balance.py
backend/app/schemas/: __init__.py  account.py  bill.py  bill_payment.py  company.py  (+7 more)
backend/tests/: conftest.py  test_api_flow.py  test_balance_sheet.py  test_db.py  test_export_csv.py  test_health.py  test_integrity.py  test_json_roundtrip.py  test_profit_loss.py  test_reports.py  test_s1_ar_flow.py  test_s2_ap_flow.py  test_templates.py
(+64 files in other folders)
